--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NathBot",
+  "name": "nathbot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,8 +7,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "appleetc",
-  "license": "ISC",
-  "dependencies": {
-    "discord.js": "^10.0.1",
-}
+  "license": "ISC"
 }
